<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor"
    android:layout_margin="@dimen/dimen_default">

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/DefaultTextView"
        android:layout_marginTop="16dp"
        android:text="@string/h1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:lineSpacingExtra="2.5sp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/DefaultTextView"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        android:layout_marginTop="8dp"
        android:text="@string/h2"
        android:textSize="14sp"
        android:textStyle="bold"
        android:lineSpacingExtra="2.5sp" />

    <TextView
        android:id="@+id/tv_source"
        style="@style/DefaultTextView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/h3"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.35000002"
        android:lineSpacingExtra="2.5sp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/h3"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

</androidx.constraintlayout.widget.ConstraintLayout>